+ [#16390] Add Kunena 1.5 to 1.6 language converter into scripts/ # [#19288] Fixed editor to act like the old one when there was no selection # [#19288] Fixed editor to be easier to use and covering more different ways to use it # [#19288] After creating/editing a message, show message that was just created or edited (if possible) # [#19288] After moderating a message, show message that was just moved # [#19288] After approving/deleting/restoring a message, show that message (if possible)
git-svn-id: file:///Users/oratzes/svn/kunena@3036 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
+++ b/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
@@ -1782,6 +1782,7 @@ PX		EM			PCT			PT
 }
 
 #Kunena td.kbuttonbar-left {
+	vertical-align:bottom;
 	width: 100%;
 	height: 1em;
 	margin: 3px;
